# deeplearning540.github.io

./: .buildinfo  .gitignore  LICENSE  README.md  README.rst  genindex.html  index.html  keras-env.yml  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: pages.yml
_downloads/aabbbf40977ce652ad9af8b2f48e3b4d/: US-Grain-Consumption.csv
_lesson01/: content.html
_lesson05/: content.html
_lesson06/: content.html
_lesson07/: content.html
_lesson08/: content.html
_sources/: index.rst.txt
_sources/_lesson01/: content.rst.txt
_sources/_lesson06/: content.rst.txt
code/: lesson03_penguin_knn.py  lesson06_penguin_keras_intro.py
doctrees/: environment.pickle  index.doctree
extras/: design.html
html/: .buildinfo  genindex.html  index.html
lesson-bonus/: content.html
lesson00/: content.html
lesson01/: content.html  foo.html
lesson02/: content.html
lesson03/: content.html
lesson04/: content.html
lesson05/: content.html
lesson06/: content.html
lesson07/: content.html
lesson08/: content.html
lesson09/: content.html
lesson111/: content.html  foo.html
lesson_01/: content.html  foo.html
lessonb01/: content.html
module-00/: content.html
module-01/: content.html  index.html
module-02/: content.html  index.html
module-03/: content.html  index.html
module-04/: content.html  index.html
module-05/: content.html  index.html
module-06/: content.html  index.html
module-07/: content.html  index.html
module-08/: content.html  index.html
module-09/: content.html  index.html
source/: conf.py  index.rst
(+83 files in other folders)
