[tool.poetry]
name = "deeplearning540"
version = "0.2.0+"
description = "This project aims to be a community effort to provide documentation for various systems available at HZDR, e.g. HPC."
authors = [
    "Peter Steinbach <p.steinbach@hzdr.de>",
    "David Pape <d.pape@hzdr.de>",
]

[tool.poetry.dependencies]
python = "^3.6"
sphinx = "^4.0.2"
sphinx_rtd_theme = "^0.5.2"
sphinx-markdown-tables = "^0.0.15"
sphinxemoji = "^0.1.6"
myst-parser = "*"